# live-nba-market-mispricing-detection

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DECISIONS.md  README.md  data_sources.md  pyproject.toml
docs/: data_requirements.md  data_schema_and_usage.md  how_it_works.md  microstructure_extension.md  odds_api_support_email.md  schema.md  variant_strategies.md
notebooks/: 00_nba_api_smoke.ipynb
reports/: backtest_findings.md  microstructure_case_study.md  microstructure_game3_case_study.md  results_log.md
scripts/: analyze_kalshi_microstructure_game.py  analyze_kalshi_ws_reactions.py  backtest_game_winner_live.py  backtest_kalshi_archive.py  backtest_live_log.py  backtest_pooled.py  capture_odds_live.py  capture_tonight.py  generate_slide_figures.py  kalshi_ws_orderbook_recorder.py  kalshi_ws_recording_watchdog.py  live_kalshi_rest_snapshot_recorder.py  live_kalshi_sports_state_recorder.py  live_signal_monitor.py  pull_kalshi_1h_archive.py  pull_pbp_season.py  run_microstructure_prediction_case.py  run_microstructure_v5_case.py  run_v2_features.py  run_v2_smoke.py  run_v5_season_split.py  run_v5_smoke.py  smoke_test_kalshi.py  smoke_test_kalshi_focused.py  smoke_test_kalshi_v2.py  smoke_test_nba_api.py  smoke_test_odds_api.py  test_backtest_engine.py  train_and_save_v2.py  train_fullgame_allgame_model.py  train_fullgame_model.py
slides/: build.js  final_deck.pptx  package.json  presentation_outline.md  speaker_script.md
src/: __init__.py
src/analysis/: __init__.py  backtest.py  mispricing.py  (+7 more)
tests/: __init__.py  test_microstructure_reaction.py
(+37 files in other folders)
