[project]
name = "stats211-final"
version = "0.0.1"
description = "STATS 211 Final Project — Live NBA Market Mispricing Detection"
authors = [
    { name = "Ming Yin Ivan Sit" },
    { name = "Vishnu Manathattai" },
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "nba_api>=1.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "tqdm>=4.66",
    "joblib>=1.3",
    "scipy>=1.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyterlab>=4.1",
]
live = [
    "cryptography>=42.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # let black handle line length

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers"
